[package]
name = "LTP"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "Lazy Tcp Port-Forwarding."
homepage = "https://github.com/radioactiveAHM/LTP"
repository = "https://github.com/radioactiveAHM/LTP"
categories = ["network-programming"]

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
